[tool.black]
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | src/fmu/tools/version\.py
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"

[build-system]
requires = [
    "pip>=19.1.1",
    "setuptools>=30.3.0",
    "setuptools_scm>=3.2.0",
    "wheel",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-apidoc",
]
