[build-system]
requires = [
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/fmu/tools/version.py"

[project]
name = "fmu-tools"
description = "Library for various tools and scripts within Fast Model Update"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Equinor", email = "fg_fmu-atlas@equinor.com" },
]
keywords = ["energy", "subsurface", "reservoir", "scientific", "engineering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dynamic = ["version"]
dependencies = [
    "disjoint-set",
    "jsonschema>=3.2.0",
    "numpy>=1.23.5",
    "openpyxl>=2.6",
    "pandas>=0.21",
    "pyyaml>=5.3",
    "scipy>=1.2",
    "xlrd>=1.2",
    "xtgeo>=2.15",
]

[project.optional-dependencies]
tests = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-runner",
    "pytest-xdist",
    "pytest-mock", 
    "pytest-snapshot",
    "rstcheck",
    "types-PyYAML",
]
docs = [
    "autoapi",
    "myst-parser",
    "sphinx<8.2.0",
    "sphinx-argparse",
    "sphinx-autodoc-typehints<2.4",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/equinor/fmu-tools"
Repository = "https://github.com/equinor/fmu-tools"
Issues = "https://github.com/equinor/fmu-tools/issues"
Documentation = "https://equinor.github.io/fmu-tools/"

[project.scripts]
ensemble_well_props = "fmu.tools.ensembles.ensemble_well_props:main"
rename_rms_scripts = "fmu.tools.rms.rename_rms_scripts:main"
rmsvolumetrics2csv = "fmu.tools.rms.volumetrics:rmsvolumetrics2csv_main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "C901",
]
select = [
    # "B",  # flake-8-bugbear
    "C",  # pylint-convention
    "E",  # pycodestyle-error
    "F",  # pyflakes
    "I",  # isort
    "NPY",  # numpy
    "PIE",  # flake8-pie
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    # "UP",  # pyupgrade
    "W",  # pylint-warnings
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.rstcheck]
ignore_directives = ["argparse", "automodule"]
ignore_messages = "(Duplicate implicit target name)"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
markers = [
    "integration: marks a test as an integration test",
    "skipunlessroxar: skip this test unless Roxar license",
]
