[bdist_wheel]
universal = 1

[flake8]
exclude = docs, tests/data
max-line-length = 88
ignore = E203, W503
# E203: whitespace after :, black conflict
# W503: line break before binary operator, black conflict

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose -x

[options]
setup_requires =
  setuptools_scm
  pytest_runner
