[bdist_wheel]
universal = 1

[flake8]
exclude = docs, tests/data
max-line-length = 88
ignore = E203, W503
# E203: whitespace after :, black conflict
# W503: line break before binary operator, black conflict

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose -x
markers =
    integration: marks a test as an integration test

[options]
setup_requires =
  setuptools_scm
  pytest_runner

[build_sphinx]
all-files = 1
warning-is-error = 1

[rstcheck]
ignore_directives=argparse,automodule
ignore_messages=(Duplicate implicit target name)
