[bdist_wheel]
universal = 1

[flake8]
exclude = docs, tests/data
max-line-length = 88
ignore = E203, W503
# E203: whitespace after :, black conflict
# W503: line break before binary operator, black conflict

[aliases]
test = pytest

[tool:pytest]
markers =
    integration: marks a test as an integration test
    skipunlessroxar: skip this test unless Roxar license

[options]
setup_requires =
  setuptools_scm
  pytest_runner

[build_sphinx]
all-files = 1
warning-is-error = 1

[rstcheck]
ignore_directives=argparse,automodule
ignore_messages=(Duplicate implicit target name)

[mypy-*]
ignore_missing_imports = True
